--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
 .App {
   text-align: center;
 }
-body h1 {
-  color: red;
+body {
+  background-color: #fff;
+}
+#tab-bar.demo {
+  display: flex;
+  flex-direction: column;
+}
+#tab-bar .demoName {
+  height: 40px;
+}
+#tab-bar .demo-preview-item .am-tab-bar {
+  background-color: white;
 }
