--- a/src/App.less
+++ b/src/App.less
@@ -2,7 +2,16 @@
     text-align: center;
 }
 body{
-    h1{
-        color:red;
-    }
+    background-color: #fff;
 }
+
+#tab-bar.demo {
+    display: flex;
+    flex-direction: column;
+  }
+  #tab-bar .demoName {
+    height: 40px;
+  }
+  #tab-bar .demo-preview-item .am-tab-bar {
+    background-color: white;
+  }
