--- a/src/components/BottomMenuLink.less
+++ b/src/components/BottomMenuLink.less
@@ -7,6 +7,7 @@
     align-items: center;
     left:0;
     right:0;
+    z-index: 1000;
     background-color: #fff;
     border-top:1px solid #ccc;
     a{
